--- a/src/css/taskItem.module.css
+++ b/src/css/taskItem.module.css
@@ -1,8 +1,8 @@
 .taskItem{
-    width: 600px;
-    padding: 10px;
+    width: 100%;
+    padding: 20px;
 }
 
 .icon{
-    width: 20px;
+    width: 15px;
 }
