--- a/src/index.css
+++ b/src/index.css
@@ -25,9 +25,13 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
+}
+
+body::-webkit-scrollbar{
+    display: none;
 }
 
 h1 {
