--- a/src/css/mainPage.module.css
+++ b/src/css/mainPage.module.css
@@ -2,12 +2,19 @@
     background-color: #eeeeee;
     margin-bottom: 1vh;
     padding: 1vh;
-    border-radius: 5px;
+    border-radius: 6px;
+    box-shadow: 0 0 20px #f3f3f3;
 }
 
 .categoryField{
     width: 591px;
 }
+
 .priorityField{
     width: 591px;
+}
+
+.searchIcon{
+    fill: #4b4b4b;
+    width: 11px;
 }
